fix: type inference for stream map